--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "mongoose": "^5.9.7",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "path": "^0.12.7"
   }
 }
