--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "acorn": "^7.1.1",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "mocha": "^7.1.1"
