--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "clean-css": "^4.2.3",
+    "constantinople": "^4.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "kind-of": "^6.0.3",
     "mongoose": "^5.9.9",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.3",
